[gd_scene load_steps=4 format=2]

[ext_resource path="res://cultivation/KiQueryEntry.gd" type="Script" id=1]
[ext_resource path="res://img/fire_egg.png" type="Texture" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PanelContainer" type="PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 75.0
margin_bottom = 22.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 145.0
margin_bottom = 171.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 145.0
margin_bottom = 99.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 99.0
rect_min_size = Vector2( 84, 99 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_top = 42.0
margin_right = 145.0
margin_bottom = 56.0
size_flags_horizontal = 0
size_flags_vertical = 6
text = "Fire Aura"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 103.0
margin_right = 145.0
margin_bottom = 171.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 61.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 61.0
margin_bottom = 14.0
text = "Element: "

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 61.0
margin_bottom = 32.0
text = "Quality: "

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 36.0
margin_right = 61.0
margin_bottom = 50.0
text = "Energy: "

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 54.0
margin_right = 61.0
margin_bottom = 68.0
text = "Velocity: "

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 65.0
margin_right = 111.0
margin_bottom = 68.0

[node name="ElementLabel" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 46.0
margin_bottom = 14.0
text = "fire"

[node name="QualityLabel" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 18.0
margin_right = 46.0
margin_bottom = 32.0
text = "chaotic"

[node name="EnergyLabel" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 36.0
margin_right = 46.0
margin_bottom = 50.0
text = "1"

[node name="VelocityLabel" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 54.0
margin_right = 46.0
margin_bottom = 68.0
text = "0%"

[node name="Timer" type="Timer" parent="."]
autostart = true
